src/test/ui/generic-associated-types/issue-68648-2.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-68648-2.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0308]: mismatched types
  --> $DIR/issue-68648-2.rs:15:17
   |
LL | fn bug<'a, T: Fun<F<'a> = T>>(t: T) -> T::F<'a> {
   |            - this type parameter
LL |     T::identity(())
   |                 ^^ expected type parameter `T`, found `()`
   |
   = note: expected type parameter `T`
                   found unit type `()`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
